# AutoRole

./: LICENSE  README.md  pyproject.toml
docs/: essential-architecture.md  exploring-stage.md  form-intelligence-stage.md  handoff-event-driven-workers.md  handoff-form-resilience.md  handoff-stage-dev-harness.md  jobs-greenhouse.json  lld-event-driven-workers.md  lld-form-resilience.md  observation_n_debug.md  real-pipeline-refactor-agent-handoff.md  scoring-stage.md  snapflow-handbook.md  snapflow-migration-plan.md  tailoring-stage.md  workday-multi-page-application-design.md
scripts/: bootstrap_and_run_e2e.sh  export_fixtures_from_run.py  run_real_pipeline.py  run_stages_independently.sh  update_database.py
src/autorole/: __init__.py  __main__.py  application_status.py  config.py  context.py  job_pipeline.py  pipeline.py  stage_base.py
src/autorole_next/: README.md  __init__.py  __main__.py  _runtime.py  _snapflow.py  app.py  config.py  payloads.py  schema.py  scoring_engine.py  stage_ids.py  store.py  tailoring_engine.py  topology.py
tests/: conftest.py
tests/fixtures/: concluding_input.json  exploration_seed_input.json  form_intelligence_input.json  form_submission_input.json  llm_field_completer_input.json  master_resume.md  packaging_input.json  qualification_input.json  sample_form.json  sample_jd.html  session_input.json
tests/integration/: test_concluding_worker.py  test_exploring_worker.py  test_form_intelligence_worker.py  test_form_submission_worker.py  test_llm_field_completer_worker.py  test_packaging_worker.py  test_pipeline_e2e.py  test_qualification_worker.py  test_scoring_worker.py  test_session_worker.py
tests/unit/: test_ats_api_scrapers.py  test_best_fit_gate.py  test_cli_main.py  test_cli_tui_helpers.py  test_concluding.py  (+19 more)
(+184 files in other folders)
