[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "autorole"
version = "0.1.0"
description = "Automate the job application flow"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
  "snapflow",
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "orjson>=3.9",
  "structlog>=24.0",
  "aiosqlite>=0.19",
  "httpx>=0.27",
  "playwright>=1.40",
  "beautifulsoup4>=4.12",
  "keyring>=24.0",
  "typer>=0.12",
  "textual>=0.55",
  "openai>=1.30",
  "anthropic>=0.25",
  "markdown>=3.5",
  "pyyaml>=6.0",
  "python-jobspy>=1.1.79",
  "pandas>=2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/autorole", "src/autorole_next"]

[tool.hatch.build.targets.wheel.force-include]
"src/autorole/integrations/discovery/sites.yaml" = "autorole/integrations/discovery/sites.yaml"
"src/autorole/integrations/discovery/config/employers.yaml" = "autorole/integrations/discovery/config/employers.yaml"
"src/autorole/integrations/discovery/config/sites.yaml" = "autorole/integrations/discovery/config/sites.yaml"

[project.urls]
Homepage = "https://github.com/KhoaTruong0108/AutoRole"
FoundationLibrary = "https://github.com/KhoaTruong0108/SnapFlow.git"

[project.scripts]
ar = "autorole.cli.main:app"
ar-next = "autorole_next.cli.main:main"

[project.optional-dependencies]
weasyprint = ["weasyprint>=62.0"]
captcha = ["twocaptcha-python>=1.1"]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
